# osa-ic

./: .readthedocs.yaml  README.md  icdeposit.py  integralicindex.py  merge.sh  pyproject.toml  setup.py
docs/: conf.py  index.rst  quickstart.md
osaic/: icdeposit.py  integralicindex.py
tests/: test_basic.py
