[tool.poetry]
name = "osa-ic"
version = "0.1.0"
description = ""
authors = ["Volodymyr Savchenko <contact@volodymyrsavchenko.com>"]

packages = [
    { include = "osaic" }
]


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
astropy = "5.0.1"
pilton = "^1.1.0"
integral-timesystem = "^1.0"
integral-site-config = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest-click = "^1.0.2"
Sphinx = "^4.4.0"
myst-parser = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

